# otcetera

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Dockerfile  LICENSE  Makefile.am  README.md  bootstrap.sh  bootstrap_osx.sh  configure.ac  easyloggingpp-License.txt  meson.build  meson.options  meson_options.txt  otceterav0.0.pc.in  reconf-clang-release.sh  reconf-clang.sh  reconf-gcc-docker.sh  reconf-gcc-travis.sh  reconf-gcc.sh  travis-build-and-test.sh
config/: .gitignore  (+2 more)
otc/: CacheList.H  Makefile.am  all_quartets.h  all_triplets.h  assert.hh  config_file.cpp  config_file.h  conflict.h  cruft.cpp  debug.h  easylogging++.h  easylogging++.hpp  embedded_tree.cpp  embedded_tree.h  embedding.cpp  embedding.h  embeddingCLI.h  embedding_cli.h  error.h  forest.cpp  forest.h  ftree.cpp  ftree.h  greedy_forest.cpp  greedy_forest.h  induced_tree.h  json.hpp  lost_taxon_info.h  memory_usage.h  meson.build  newick.cpp  newick.h  newick_tokenizer.h  node_embedding.cpp  node_embedding.h  node_naming.h  otc_base_includes.h  otcetera.cpp  otcetera.h  otcli.cpp  (+24 more)
otc/ctrie/: context_ctrie_db.cpp  context_ctrie_db.h  ctrie.cpp  ctrie.h  ctrie_db.cpp  ctrie_db.h  ctrie_node.cpp  ctrie_node.h  ctrie_search_impl.h  search_data_models.h  search_impl.cpp  str_utils.cpp  str_utils.h
otc/taxonomy/: diff_maker.cpp  diff_maker.h  flags.cpp  flags.h  name_searching.cpp  patching.cpp  patching.h  taxonomy-diff.h  taxonomy.cpp  taxonomy.h
otc/tnrs/: context.cpp  context.h  nomenclature.cpp  nomenclature.h  tnrs_json_methods.cpp
otc/ws/: conflictws.cpp  extract.h  find_node.cpp  find_node.h  node_namer_supported_by_stasher.h  otc_web_error.h  parallelreadserialwrite.h  prune.h  taxonomyws.cpp  tnrsws.cpp  tolws.cpp  tolws.h  tolwsadaptors.h  trees_to_serve.cpp  trees_to_serve.h
otc/ws/nexson/: nexson.cpp  nexson.h
test/: Makefile.am  clean-and-resolve.py  intersection_of_lists.py  meson.build  simplify_example.py  test_otc_greedyforest.cpp  test_otc_newicktoken.cpp  test_otc_tree_iter.cpp  test_otc_treefromnewick.cpp  xor_of_lists.py
test/data/tnrs-taxonomy-induced/: taxonomy.tsv
test/data/tnrs-taxonomy-tree/out1.0/annotated_supertree/: annotations.json  annotations1.json
test/data/tnrs-taxonomy-tree/out1.0/assessments/: index.html  log.txt  taxonomy_degree_distribution.txt
test/data/tnrs-taxonomy-tree/out1.0/cleaned_ott/: cleaned_ott.json  cleaned_ott.tre  cleaned_ott_1.json  cleaned_ott_with_hiddenbarren.tre  flagged_in_cleaned.json
test/data/tnrs-taxonomy-tree/out1.0/cleaned_phylo/: cleaning_flags.txt  index.html  xx_1@1-taxonomy.tre  xx_1@1.json
test/data/tnrs-taxonomy-tree/out1.0/exemplified_phylo/: exemplified_log.json  index.html  pruned_for_regraft_cleaned_ott.json
test/data/tnrs-taxonomy-tree/out1.0/grafted_solution/: grafted_solution.tre  index.html
test/data/tnrs-taxonomy-tree/out1.0/labelled_supertree/: broken_taxa.json  index.html  labelled_supertree_ottnames_without_monotypic.tre  labelled_supertree_simplified_ottnames.tre  labelled_supertree_simplified_ottnames_without_monotypic.tre
test/data/tnrs-taxonomy-tree/out1.0/phylo_input/: index.html  index.json
test/data/tnrs-taxonomy-tree/out1.0/phylo_snapshot/: concrete_rank_collection.json  xx_1@1.json
test/data/tnrs-taxonomy-tree/out1.0/subproblem_solutions/: index.html  index.json  ott5268475.tre  ott805080.tre  solution-degree-distributions.txt
test/expectedws-induced/contexts/: expected.json
test/expectedws-induced/infer_contexts_ambig_plant/: expected.json
test/expectedws-induced/infer_contexts_animals/: method.json
test/expectedws-induced/infer_contexts_life/: method.json
test/expectedws-induced/match_names_fuzzy/: expected.json  method.json
test/expectedws-induced/match_names_fuzzy_contexts/: expected.json  method.json
test/hidden/match_names_fuzzy/: expected.json
test/tnrs/data/taxonomy-induced/: taxonomy.tsv
test/tnrs/expectedws-induced/: .gitignore
test/tnrs/expectedws-induced/contexts/: expected.json  method.json
tools/: Makefile.am  annotate-synth.cpp  assertinvariants.cpp  broken-taxa.cpp  checknamednodes.cpp  checksupertree.cpp  checktaxonomicnodes.cpp  conflict-stats.cpp  contrast-astral-runs.cpp  countleaves.cpp  degreedistribution.cpp  detectcontested.cpp  displayedstats.cpp  distance.cpp  explain-phylo-diffs.cpp  findresolution.cpp  findunsupportednodes.cpp  git_version.h.in  graft-solutions.cpp  inducedsubtree.cpp  meson.build  missingsplits.cpp  moveextincthighertoavoidcontestingtaxa.cpp  mungenames.cpp  name-unnamed-nodes.cpp  nonterminaltoexemplars.cpp  polytomycount.cpp  prune-clean.cpp  prune-trees.cpp  prunesynthtosubproblem.cpp  prunetaxonomy.cpp  prunetosubtree.cpp  quartet-distances.cpp  regrafttaxonomygenerator.cpp  relabel-tree.cpp  remaptodeepestunlisted.cpp  rf.cpp  rooted-tree-diff.py  sampletips.cpp  scaffoldedsupertree.cpp  (+18 more)
tools/assert-invariants/: Makefile.am  assertinvariants.cpp
tools/check-taxonomic-nodes/: Makefile.am  checktaxonomicnodes.cpp
tools/detect-contested/: Makefile.am  detectcontested.cpp
tools/find-unsupported-nodes/: Makefile.am  findunsupportednodes.cpp
tools/polytomy-count/: Makefile.am  polytomycount.cpp
tools/prune-singletons/: Makefile.am  prunetaxonomy.cpp
tools/remap-to-deepest-unlisted/: Makefile.am  remaptodeepestunlisted.cpp
tools/scaffolded-supertree/: Makefile.am  scaffoldedsupertree.cpp
tools/simple-stats/: Makefile.am  countleaves.cpp  degreedistribution.cpp  inducedsubtree.cpp  missingsplits.cpp  polytomycount.cpp  rf.cpp  taxonconflictreport.cpp
tools/solver/: build.cpp  build.h  combine.cpp  combine.h  component.h  names.cpp  names.h  oracle.cpp  oracle.h  rollback.cpp  rollback.h  rsplit.cpp  rsplit.h  solution.cpp  solution.h  tree.h
ws/: Makefile.am  conflictws.cpp  meson.build  node_namer_supported_by_stasher.h  otc_web_error.h  parallelreadserialwrite.h  taxonomyws.cpp  test_web_services.py  tnrsws.cpp  tolws.cpp  tolws.h  tolwsadaptors.cpp  tolwsadaptors.h  tolwsbooting.cpp  trees_to_serve.cpp  trees_to_serve.h
ws/nexson/: nexson.cpp  nexson.h
ws/tnrs/: context.cpp  context.h  nomenclature.h
(+548 files in other folders)
