pkglib_LTLIBRARIES = libotcetera.la
libotcetera_ladir = $(includedir)/otc
libotcetera_la_LDFLAGS = -release @PACKAGE_VERSION@


libotcetera_la_HEADERS = \
	error.h \
	newick.h \
	otcetera.h \
	otcli.h \
	tree.h \
	util.h

libotcetera_la_SOURCES = \
	otcetera.cpp \
	otcli.cpp \
	tree.cpp \
	util.cpp
