deps = [boost, libotcetera]
executable('testotcnewicktoken', ['test_otc_newicktoken.cpp'], dependencies: deps)
executable('testotcgreedyforest', ['test_otc_greedyforest.cpp'], dependencies: deps)
executable('testotctreefromnewick',['test_otc_treefromnewick.cpp'],dependencies: deps)
executable('testotctreeiter',['test_otc_tree_iter.cpp'], dependencies:deps)
